--- a/app/src/main/res/layout/fragment_worksheet2.xml
+++ b/app/src/main/res/layout/fragment_worksheet2.xml
@@ -80,7 +80,7 @@
         android:layout_width="@dimen/line_txt_length"
         android:layout_height="@dimen/line_height"
         android:layout_marginStart="@dimen/small"
-        android:layout_marginTop="@dimen/small"
+        android:layout_marginTop="@dimen/xxsmall"
         android:text="@string/urgency"
         android:textColor="@color/colorText"
         android:textSize="@dimen/large_txt"/>
@@ -144,7 +144,7 @@
         android:layout_width="@dimen/line_txt_length"
         android:layout_height="@dimen/line_height"
         android:layout_marginStart="@dimen/small"
-        android:layout_marginTop="@dimen/small"
+        android:layout_marginTop="@dimen/xxsmall"
         android:text="@string/parts_used"
         android:textColor="@color/colorText"
         android:textSize="@dimen/large_txt"/>
@@ -163,24 +163,16 @@
         android:layout_width="@dimen/long_line"
         android:layout_height="@dimen/line_height"
         android:layout_marginStart="@dimen/small"
-        android:layout_marginTop="@dimen/small"
+        android:layout_marginTop="@dimen/xxsmall"
         android:text="@string/solution"
         android:textColor="@color/colorText"
         android:textSize="@dimen/large_txt"/>
 
-    <EditText
-        android:id="@+id/editText6"
-        android:layout_width="@dimen/long_line"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/small"
-        android:ems="10"
-        android:gravity="center_horizontal|top"
-        android:inputType="textMultiLine" />
 
     <EditText
         android:id="@+id/editText7"
         android:layout_width="@dimen/long_line"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/line_height"
         android:layout_marginStart="@dimen/small"
         android:ems="10"
         android:gravity="center_horizontal|top"
@@ -197,7 +189,6 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/header_size"
             android:layout_marginEnd="@dimen/inline_spacing"
-            android:layout_marginTop="@dimen/header_size"
             android:background="@color/colorBtn"
             android:text="@string/back"
             android:textColor="@color/white"
@@ -208,10 +199,7 @@
             android:id="@+id/forward"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/small"
             android:layout_marginEnd="@dimen/small"
-            android:layout_marginStart="@dimen/inline_spacing"
-            android:layout_marginTop="@dimen/small"
             android:background="@color/colorBtn"
             android:text="@string/forward"
             android:textColor="@color/white"
