--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -26,7 +26,7 @@
     <dimen name="medium">20sp</dimen>
     <dimen name="large">25sp</dimen>
     <dimen name="xlarge">35dp</dimen>
-    <dimen name="fifteen">150</dimen>
+    <dimen name="fifteen">150dp</dimen>
     <dimen name="long_line">350dp</dimen>
 
     <dimen name="xsmall_txt">13sp</dimen>
