--- a/app/src/main/res/layout/fragment_worksheet2.xml
+++ b/app/src/main/res/layout/fragment_worksheet2.xml
@@ -22,58 +22,56 @@
         android:textSize="@dimen/large_txt"/>
 
 
-    <LinearLayout
+    <RadioGroup
         android:layout_width="match_parent"
-        android:layout_height="@dimen/line_height">
+        android:layout_height="87dp">
 
-        <CheckBox
-            android:id="@+id/checkBox01"
-            android:layout_width="@dimen/fifteen"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="@dimen/large"
-            android:text="@string/assign_it"
-            android:textColor="@color/colorText"
-            android:textSize="@dimen/check_txt"
-            />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/line_height">
 
-        <CheckBox
-            android:id="@+id/checkBox20"
-            android:layout_width="@dimen/fifteen"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="@dimen/large"
-            android:text="@string/pending"
-            android:textColor="@color/colorText"
-            android:textSize="@dimen/check_txt"
-            />
+            <CheckBox
+                android:layout_width="@dimen/fifteen"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="@dimen/large"
+                android:text="@string/assign_it"
+                android:textColor="@color/colorText"
+                android:textSize="@dimen/check_txt" />
+
+            <CheckBox
+                android:layout_width="@dimen/fifteen"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="@dimen/large"
+                android:text="@string/pending"
+                android:textColor="@color/colorText"
+                android:textSize="@dimen/check_txt" />
 
 
-    </LinearLayout>
+        </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/title_size">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/title_size">
 
-        <CheckBox
-            android:id="@+id/checkBox03"
-            android:layout_width="@dimen/fifteen"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="@dimen/large"
-            android:text="@string/planned"
-            android:textColor="@color/colorText"
-            android:textSize="@dimen/check_txt"
-            />
+            <CheckBox
+                android:layout_width="@dimen/fifteen"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="@dimen/large"
+                android:text="@string/planned"
+                android:textColor="@color/colorText"
+                android:textSize="@dimen/check_txt" />
 
-        <CheckBox
-            android:id="@+id/checkBox04"
-            android:layout_width="@dimen/fifteen"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="@dimen/large"
-            android:text="@string/solved"
-            android:textColor="@color/colorText"
-            android:textSize="@dimen/check_txt"
-            />
+            <CheckBox
+                android:layout_width="@dimen/fifteen"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="@dimen/large"
+                android:text="@string/solved"
+                android:textColor="@color/colorText"
+                android:textSize="@dimen/check_txt" />
 
-    </LinearLayout>
+        </LinearLayout>
+
+    </RadioGroup>
 
     <TextView
         android:id="@+id/urgency"
@@ -85,59 +83,62 @@
         android:textColor="@color/colorText"
         android:textSize="@dimen/large_txt"/>
 
-    <LinearLayout
+    <RadioGroup
         android:layout_width="match_parent"
-        android:layout_height="@dimen/line_height">
+        android:layout_height="91dp">
 
-        <RadioButton
-            android:id="@+id/veryHigh"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginStart="@dimen/medium"
-            android:layout_marginEnd="@dimen/xsmall"
-            android:textSize="@dimen/check_txt"
-            android:text="@string/veryHigh"
-            android:textColor="@color/colorText"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/line_height">
 
-        <RadioButton
-            android:id="@+id/high"
-            android:layout_width="@dimen/btn_padding02"
-            android:layout_height="match_parent"
-            android:textSize="@dimen/check_txt"
-            android:text="@string/high"
-            android:textColor="@color/colorText"/>
+            <RadioButton
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginStart="@dimen/medium"
+                android:layout_marginEnd="@dimen/xsmall"
+                android:text="@string/veryHigh"
+                android:textColor="@color/colorText"
+                android:textSize="@dimen/check_txt" />
 
-        <RadioButton
-            android:id="@+id/medium"
-            android:layout_width="@dimen/radio_length"
-            android:layout_height="match_parent"
-            android:textSize="@dimen/check_txt"
-            android:text="@string/medium"
-            android:textColor="@color/colorText"/>
+            <RadioButton
+                android:layout_width="@dimen/btn_padding02"
+                android:layout_height="match_parent"
+                android:text="@string/high"
+                android:textColor="@color/colorText"
+                android:textSize="@dimen/check_txt" />
 
-    </LinearLayout>
+            <RadioButton
+                android:layout_width="@dimen/radio_length"
+                android:layout_height="match_parent"
+                android:text="@string/medium"
+                android:textColor="@color/colorText"
+                android:textSize="@dimen/check_txt" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/line_height">
+        </LinearLayout>
 
-        <RadioButton
-            android:layout_width="@dimen/radio_length"
-            android:layout_height="match_parent"
-            android:layout_marginStart="@dimen/xlarge"
-            android:layout_marginEnd="@dimen/medium"
-            android:text="@string/low"
-            android:textSize="@dimen/check_txt"
-            android:textColor="@color/colorText"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/line_height">
 
-        <RadioButton
-            android:layout_width="@dimen/radio_length"
-            android:layout_height="match_parent"
-            android:text="@string/verylow"
-            android:textColor="@color/colorText"
-            android:textSize="@dimen/check_txt"/>
+            <RadioButton
+                android:layout_width="@dimen/radio_length"
+                android:layout_height="match_parent"
+                android:layout_marginStart="@dimen/xlarge"
+                android:layout_marginEnd="@dimen/medium"
+                android:text="@string/low"
+                android:textColor="@color/colorText"
+                android:textSize="@dimen/check_txt" />
 
-    </LinearLayout>
+            <RadioButton
+                android:layout_width="@dimen/radio_length"
+                android:layout_height="match_parent"
+                android:text="@string/verylow"
+                android:textColor="@color/colorText"
+                android:textSize="@dimen/check_txt" />
+
+        </LinearLayout>
+
+    </RadioGroup>
 
     <TextView
         android:id="@+id/parts_Used"
@@ -150,7 +151,7 @@
         android:textSize="@dimen/large_txt"/>
 
     <EditText
-        android:id="@+id/editText5"
+        android:id="@+id/parts_used_textfield"
         android:layout_width="@dimen/long_line"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/small"
@@ -170,7 +171,7 @@
 
 
     <EditText
-        android:id="@+id/editText7"
+        android:id="@+id/location_textfield"
         android:layout_width="@dimen/long_line"
         android:layout_height="@dimen/line_height"
         android:layout_marginStart="@dimen/small"
