--- a/app/src/main/res/layout/fragment_worksheet3.xml
+++ b/app/src/main/res/layout/fragment_worksheet3.xml
@@ -52,5 +52,18 @@
         android:textColor="@color/white"
         android:textSize="@dimen/button_text" />
 
+    <Button
+        android:id="@+id/back"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/header_size"
+        android:layout_marginTop="@dimen/header_size"
+        android:layout_marginEnd="@dimen/inline_spacing"
+        android:background="@color/colorBtn"
+        android:text="@string/back"
+        android:textColor="@color/white"
+        android:textSize="17sp"
+        android:visibility="visible" />
+
 
 </LinearLayout>
